# 1799LidarLib

./: baudtest.json  bobby.json  hiiii.json  licence.md  lidarProject.json  lmao.json.json  lol.json  pyproject.toml  requirements.txt  stop.py  test25.py  testFile.json  testLidar.json  testProj.json
lidarLib/: Lidar.py  LidarConfigs.py  lidarConfigTool.py  lidarManager.py
src/lidarLib/: FRCLidarPublisher.py  FRCQuickstartLidarProject.py  Lidar.py  LidarConfigs.py  lidarConfigTool.py  lidarHitboxNode.py  lidarHitboxingMap.py  lidarLib  lidarManager.py  lidarMap.py  lidarMeasurement.py  lidarPipeline.py  lidarProtocol.py  publisher.py  rplidarSerial.py  stop.py  translation.py  util.py
src/lidarLib/renderLib/: renderMachine.py  renderPipeCap.py
tests/: lidar1.json  lidarLib  lidarProject.json  test14.py  test15.py  test19.py  test20.py  test25.py
