[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "1799LidarLib"
version = "0.0.5"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Library for interfacing with slamtech rplidars "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "pyserial",
  "pygame",
  "robotpy",
  "matplotlib",

]


license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/FRC-1799/LidarDetection"
Issues = "https://github.com/FRC-1799/LidarDetection/issues"
[tool.hatch.build.targets.wheel]
packages = ["src/lidarLib"]


pypi-AgENdGVzdC5weXBpLm9yZwIkZjdiZjZmZTMtOGFhMS00NDM4LTlkOTAtOWZhMTgyNmZmOGVlAAIqWzMsIjllYjljYjc1LTBlNzgtNGRjMi05ODYzLWZlNjViMmM3NWU1ZiJdAAAGILmjy5nUosrh8rBAPk3AqTiJuBSl_ZVP6veUZ4nnMkgP